--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -188,7 +188,7 @@
                                 <mat-option value='9' (click)="openPage1()">User Information</mat-option>
                             </mat-select>
                         </form>
-                        <!-- <mat-icon class='mat-icon' (click)='updateUserDefaultPage()'>stars</mat-icon> -->
+                        <mat-icon class='mat-icon' (click)='updateUserDefaultPage()'>stars</mat-icon>
                         &nbsp;&nbsp;&nbsp;&nbsp;<span class='font1em'>{{userName}}</span>
                 </div>
                 <div fxLayout="row" class="mat-body w-20 font1em">
