--- a/src/app/shared/components/menu/vertical-menu/vertical-menu.component.html
+++ b/src/app/shared/components/menu/vertical-menu/vertical-menu.component.html
@@ -4,7 +4,7 @@
             <a mat-button fxLayout="row" [fxLayoutAlign]="(settings.menuType=='default') ? 'start center' : 'center center'"
                 [routerLink]="[menu.routerLink]" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact:true}"
                 [matTooltip]="menu.title" matTooltipPosition="after" [matTooltipDisabled]="(settings.menuType=='mini') ? 'false' : 'true'"
-                (click)="onClick(menu.id)" [id]="'menu-item-'+menu.id">
+                (click)="onClick(menu)" [id]="'menu-item-'+menu.id">
                 <mat-icon class="menu-icon">{{menu.icon}}</mat-icon>
                 <span class="menu-title">{{menu.title}}</span>
             </a>
@@ -13,7 +13,7 @@
             <a mat-button fxLayout="row" [fxLayoutAlign]="(settings.menuType=='default') ? 'start center' : 'center center'"
                 [attr.href]="menu.href || ''" [attr.target]="menu.target || ''"
                 [matTooltip]="menu.title" matTooltipPosition="after" [matTooltipDisabled]="(settings.menuType=='mini') ? 'false' : 'true'"
-                (click)="onClick(menu.id)" [id]="'menu-item-'+menu.id">
+                (click)="onClick(menu)" [id]="'menu-item-'+menu.id">
                 <mat-icon class="menu-icon">{{menu.icon}}</mat-icon>
                 <span class="menu-title">{{menu.title}}</span>
             </a>
@@ -21,7 +21,7 @@
         @if (menu.hasSubMenu) {
             <a mat-button fxLayout="row" [fxLayoutAlign]="(settings.menuType=='default') ? 'start center' : 'center center'"
                 [matTooltip]="menu.title" matTooltipPosition="after" [matTooltipDisabled]="(settings.menuType=='mini') ? 'false' : 'true'"
-                (click)="onClick(menu.id)" [id]="'menu-item-'+menu.id">
+                (click)="onClick(menu)" [id]="'menu-item-'+menu.id">
                 <mat-icon class="menu-icon">{{menu.icon}}</mat-icon>
                 <span class="menu-title">{{menu.title}}</span>
                 <mat-icon class="menu-expand-icon transition-2">arrow_drop_down</mat-icon>
