--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,32 @@
+
+<!-- <app-login></app-login> -->
+
+
+
+<div id="app" class="app" [dir]="settings.rtl ? 'rtl' : 'ltr'"
+            [ngClass]="settings.theme" 
+            [class.fixed-header]="settings.fixedHeader"
+            [class.horizontal-menu]="settings.menu == 'horizontal'" 
+            [class.compact]="settings.menuType == 'compact'" 
+            [class.mini]="settings.menuType == 'mini'">
 <router-outlet></router-outlet>
+
+<!-- <div >
+    <mat-spinner color="primary"></mat-spinner>  
+    <h4>loading...</h4>
+</div> -->
+
+</div>
+    <!-- <router-outlet /> -->
+    
+    <!-- <div id="app-spinner" [class.hide]="!settings.loadingSpinner"> 
+        <mat-spinner color="primary"></mat-spinner>  
+        <h4>loading...</h4>
+    </div> -->
+<!-- </div> -->
+
+<!-- <router-outlet></router-outlet> -->
+
+<!-- [class.hide]="!settings.loadingSpinner"> 
+    <mat-spinner color="primary"></mat-spinner>  
+    <h4>loading...</h4> -->
