physical-location-changes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,12 @@
+<div id="app" class="app" [dir]="settings.rtl ? 'rtl' : 'ltr'"
+            [ngClass]="settings.theme"
+            [class.fixed-header]="settings.fixedHeader"
+            [class.horizontal-menu]="settings.menu == 'horizontal'"
+            [class.compact]="settings.menuType == 'compact'"
+            [class.mini]="settings.menuType == 'mini'">
+
 <router-outlet></router-outlet>
+
+
+<!-- <h1>Welcome to My Angular App</h1>
+<button mat-raised-button color="warn" (click)="openDialog()">Open Dialog</button> -->
