--- a/src/app/feature/session/master/miscellaneouse-master/make-master/components/make-master-company-list/make-master-company-list.component.scss
+++ b/src/app/feature/session/master/miscellaneouse-master/make-master/components/make-master-company-list/make-master-company-list.component.scss
@@ -2,4 +2,11 @@
 .wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 10px;
+    padding: 10px;
+    background-color: #f5f5f5;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    margin: 20px 0;
+    
   }
