--- a/src/app/shared/components/menu/horizontal-menu/horizontal-menu.component.scss
+++ b/src/app/shared/components/menu/horizontal-menu/horizontal-menu.component.scss
@@ -1,5 +1,4 @@
-@import '../../../../theme/styles/variables';
-
+@import "../../../../theme/styles/variables";
 .horizontal-menu-item{
     position: relative;
     .mat-mdc-button{
