--- a/src/app/feature/session/master/miscellaneouse-master/make-master/components/make-master-company-list/make-master-company-list.component.html
+++ b/src/app/feature/session/master/miscellaneouse-master/make-master/components/make-master-company-list/make-master-company-list.component.html
@@ -1,84 +1,47 @@
 <form [formGroup]="makecompanyform">
-  <app-custom-spinner></app-custom-spinner>
+  <mat-table [dataSource]="dataSource1" class="mat-elevation-z8">
 
-  <mat-table [dataSource]="dataSource">
-    <!-- Column 1: Company Names with Checkbox -->
+    <!-- Company List Column -->
     <ng-container matColumnDef="company_list">
       <mat-header-cell *matHeaderCellDef> COMPANY NAMES </mat-header-cell>
-      <mat-cell *matCellDef="let element; let ind = index;">
-        <ng-container *ngIf="element.excluded">
-          <mat-checkbox
-            (change)="enableRadiobtn(ind)"
-            [checked]="element.flg_extend === 'Y'"
-            [formControlName]="'chkcmp' + element.company_code"
-            [disabled]="true"
-            [value]="element.company_short_name"
-          >
-            {{ element.company_short_name }}
-          </mat-checkbox>
-        </ng-container>
-
-        <ng-container *ngIf="!element.excluded">
-          <mat-checkbox
-            (change)="enableRadiobtn(ind)"
-            [checked]="element.flg_extend === 'Y'"
-            [formControlName]="'chkcmp' + element.company_code"
-            [value]="element.company_short_name"
-          >
-            {{ element.company_short_name }}
-          </mat-checkbox>
-        </ng-container>
+      <mat-cell *matCellDef="let element; let i = index">
+        <mat-checkbox
+          [formControlName]="'chkcmp' + element.company_code"
+          (change)="enableRadiobtn(element)"
+        >
+          {{ element.company_short_name }}
+        </mat-checkbox>
       </mat-cell>
     </ng-container>
 
-    <!-- Column 2: Radio Button for Principal Flag -->
+    <!-- Radio Button Column -->
     <ng-container matColumnDef="radio_btn">
       <mat-header-cell *matHeaderCellDef> Principal Flag </mat-header-cell>
       <mat-cell *matCellDef="let element">
-        <ng-container *ngIf="!element.excluded">
-          <mat-radio-group
-            [formControlName]="'rdbmfgflag' + element.company_code"
-            aria-label="Select an option"
-          >
-            <mat-radio-button
-              value="Y"
-              [disabled]="element.flg_extend === 'N'"
-              [checked]="element.cmk_principal_mfg_flg === 'Y'"
-            >
-              YES
-            </mat-radio-button>
-            <mat-radio-button
-              value="N"
-              [disabled]="element.flg_extend === 'N'"
-              [checked]="element.cmk_principal_mfg_flg === 'N'"
-            >
-              NO
-            </mat-radio-button>
-          </mat-radio-group>
-        </ng-container>
-
-        <ng-container *ngIf="element.excluded">
-          <mat-radio-group
-            [formControlName]="'rdbmfgflag' + element.company_code"
-            aria-label="Select an option"
-          >
-            <mat-radio-button value="Y" [checked]="element.cmk_principal_mfg_flg === 'Y'">YES</mat-radio-button>
-            <mat-radio-button value="N" [checked]="element.cmk_principal_mfg_flg === 'N'">NO</mat-radio-button>
-          </mat-radio-group>
-        </ng-container>
+        <mat-radio-group
+          [formControlName]="'rdbmfgflag' + element.company_code"
+          aria-label="Select an option">
+          <mat-radio-button
+            value="Y" [disabled]="element.flg_extend === 'N'">
+            YES
+          </mat-radio-button>
+          <mat-radio-button
+            value="N"
+            [disabled]="element.flg_extend === 'N'">
+            No
+          </mat-radio-button>
+        </mat-radio-group>
       </mat-cell>
     </ng-container>
 
-    <!-- Row Templates -->
-    <mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></mat-header-row>
+    <!-- Rows -->
+    <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
 
-  <!-- Dialog Buttons -->
-  <mat-dialog-actions>
-    <button mat-raised-button color="primary" type="submit" mat-dialog-close (click)="save(makecompanyform.value)">
-      Submit
-    </button>
-    <button mat-raised-button color="primary" type="button" [mat-dialog-close]="true">Cancel</button>
+  <!-- Actions -->
+  <mat-dialog-actions align="end">
+    <button mat-raised-button color="primary" (click)="save(makecompanyform.value)">Submit</button>
+    <button mat-raised-button mat-dialog-close color="primary">Cancel</button>
   </mat-dialog-actions>
 </form>
