--- a/src/app/feature/session/session.component.html
+++ b/src/app/feature/session/session.component.html
@@ -1,1 +1,225 @@
-<p>session works!</p>
+<!-- <mat-sidenav-container [dir]="settings.rtl ? 'rtl' : 'ltr'">
+    @if (settings.menu == 'vertical') {
+        <mat-sidenav [opened]="settings.sidenavIsOpened" [mode]="settings.sidenavIsPinned ? 'side' : 'over'" #sidenav (openedStart)="showSidenav = !showSidenav" (closedStart)="showSidenav = !showSidenav" class="sidenav mat-elevation-z6">
+            <app-sidenav></app-sidenav>
+        </mat-sidenav> 
+    }
+  
+    <mat-sidenav-content #mainSidenavContent id="main" (scroll)="onPageScroll($event)"> 
+
+            <mat-toolbar color="primary" class="px-2">
+                <div fxLayout="row" fxLayoutAlign="space-between center" class="w-100">            
+                    <div fxLayout="row" fxLayoutAlign="center center"> 
+                        @if (settings.menu == 'vertical') {
+                            <button mat-icon-button (click)="toggleSidenav()">
+                                <mat-icon>menu</mat-icon>
+                            </button> 
+                            <button fxShow="false" fxShow.gt-xs mat-icon-button (click)="settings.sidenavUserBlock = !settings.sidenavUserBlock">
+                                <mat-icon>person</mat-icon>
+                            </button> 
+                        }                   
+                        @if (settings.menu == 'horizontal') {
+                            <a mat-raised-button color="accent" routerLink="/" (click)="closeSubMenus()" class="small-logo">G</a>
+                            <a class="logo" routerLink="/" (click)="closeSubMenus()">GRADUS</a>  
+                        } 
+                    </div>            
+                    <div fxLayout="row" fxLayoutAlign="end center">
+                        <div fxLayout="row" fxLayoutAlign="start center" fxShow="false" fxShow.gt-xs class="search-bar">
+                            <form method="get" fxLayout="row" fxLayoutAlign="start center">
+                                <input type="text" placeholder="Type to search..." class="mat-elevation-z3"  [class.show]="toggleSearchBar">
+                                <button mat-icon-button (click)="toggleSearchBar = !toggleSearchBar" type="button">
+                                    <mat-icon>search</mat-icon>
+                                </button> 
+                            </form>
+                        </div>                
+                        <app-flags-menu fxShow="false" fxShow.gt-sm></app-flags-menu>
+                        <app-fullscreen></app-fullscreen> 
+                        <app-applications fxShow="false" fxShow.gt-sm></app-applications>
+                        <app-messages fxShow="false" fxShow.gt-xs></app-messages>
+                        <app-user-menu></app-user-menu> 
+                    </div>
+                </div>
+            </mat-toolbar>
+
+            @if (settings.menu == 'horizontal') {
+                <mat-toolbar id="horizontal-menu" color="primary" 
+                    class="horizontal-menu px-2 transition-2"  
+                    [class.fixed-top]="!settings.fixedHeader">
+                    <div fxLayout="row" fxLayoutAlign="center center" class="w-100">            
+                        <app-horizontal-menu [menuParentId]="0"></app-horizontal-menu>
+                    </div>            
+                </mat-toolbar> 
+            }
+            
+          
+            <div #mainContent id="main-content" (scroll)="onPageScroll($event)" class="sidenav-content-inner transition-2" [class.has-footer]="settings.hasFooter" [class.fixed-header]="settings.fixedHeader" [class.no-breadcrumb]="router.url == '/'"> 
+                <app-breadcrumb></app-breadcrumb> 
+                <router-outlet></router-outlet>
+            </div> 
+
+            @if (settings.hasFooter) {
+                <div fxLayout="row" fxLayoutAlign="space-between center" class="footer bg-primary" [class.full-width]="!showSidenav">
+                    <div>
+                        <a mat-raised-button color="accent" href="https://themeforest.net/item/gradus-angular-5-material-design-admin-template/21241729" target="_blank">
+                            <mat-icon class="mx-2">shopping_cart</mat-icon>Purchase GRADUS
+                        </a>
+                    </div>
+                    <div>
+                        <small>Copyright © 2024 All Rights Reserved</small>
+                    </div>
+                </div>
+            }           
+
+            <div fxLayout="row" fxLayoutAlign="center center" class="options-icon" (click)="options.toggle()">
+                <mat-icon>settings</mat-icon>
+            </div>
+
+            <div #backToTop fxLayout="row" fxLayoutAlign="center center" class="back-to-top" (click)="scrollToTop()">
+                <mat-icon>arrow_upward</mat-icon>
+            </div> 
+    </mat-sidenav-content>
+    
+    <mat-sidenav #options position="end" class="options">        
+       
+        <div fxLayout="row" fxLayoutAlign="center center" class="control mat-elevation-z1">
+            <h2>Settings</h2>
+        </div>  
+
+        <ng-scrollbar orientation="vertical"> 
+            <div fxLayout="column" class="control">
+                <h4>Layout</h4>        
+                <div fxLayout="row" fxLayoutAlign="space-between center">
+                    <span>Fixed header</span>
+                    <mat-slide-toggle [checked]="settings.fixedHeader" (change)="settings.fixedHeader = !settings.fixedHeader" labelPosition="before"></mat-slide-toggle>
+                </div>                
+                <div fxLayout="row" fxLayoutAlign="space-between center">
+                    <span>RTL</span>
+                    <mat-slide-toggle [checked]="settings.rtl" (change)="settings.rtl = !settings.rtl" labelPosition="before"></mat-slide-toggle>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="space-between center">
+                    <span>Has Footer</span>
+                    <mat-slide-toggle [checked]="settings.hasFooter" (change)="settings.hasFooter = !settings.hasFooter" labelPosition="before"></mat-slide-toggle>
+                </div>
+            </div>
+
+            <div fxLayout="column" class="control">
+                <h4>Choose menu</h4>
+                <mat-radio-group [(ngModel)]="menuOption" (change)="chooseMenu()">
+                    @for (menu of menus; track menu) {
+                        <mat-radio-button [value]="menu">{{menu}}</mat-radio-button>
+                    } 
+                </mat-radio-group>
+            </div>
+
+            <div fxLayout="column" class="control">
+                <h4>Choose menu type</h4>
+                <mat-radio-group [(ngModel)]="menuTypeOption" (change)="chooseMenuType()">
+                    @for (menuType of menuTypes; track menuType) {
+                        <mat-radio-button [value]="menuType">{{menuType}}</mat-radio-button>
+                    }                
+                </mat-radio-group>
+            </div>
+
+            <div fxLayout="column" class="control">
+                <h4>Choose theme skin</h4>
+                <div fxLayout="row" fxLayoutAlign="space-around center"> 
+                    <div class="skin-primary indigo-light" (click)="changeTheme('indigo-light')"><div class="skin-secondary"></div></div>  
+                    <div class="skin-primary teal-light" (click)="changeTheme('teal-light')"><div class="skin-secondary"></div></div>  
+                    <div class="skin-primary red-light" (click)="changeTheme('red-light')"><div class="skin-secondary"></div></div>  
+                    <div class="skin-primary blue-dark" (click)="changeTheme('blue-dark')"><div class="skin-secondary"></div></div>  
+                    <div class="skin-primary green-dark" (click)="changeTheme('green-dark')"><div class="skin-secondary"></div></div>  
+                    <div class="skin-primary pink-dark" (click)="changeTheme('pink-dark')"><div class="skin-secondary"></div></div>  
+                </div>
+            </div>
+
+            <div fxLayout="column" class="control">
+                <h4>Sidenav options</h4>
+                <div fxLayout="row" fxLayoutAlign="space-between center">
+                    <span>Opened sidenav</span>
+                    <mat-slide-toggle [checked]="settings.sidenavIsOpened" (change)="settings.sidenavIsOpened = !settings.sidenavIsOpened" labelPosition="before"></mat-slide-toggle>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="space-between center">
+                    <span>Pinned sidenav</span>
+                    <mat-slide-toggle [checked]="settings.sidenavIsPinned" (change)="settings.sidenavIsPinned = !settings.sidenavIsPinned" labelPosition="before"></mat-slide-toggle>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="space-between center">
+                    <span>Sidenav user info</span>
+                    <mat-slide-toggle [checked]="settings.sidenavUserBlock" (change)="settings.sidenavUserBlock = !settings.sidenavUserBlock" labelPosition="before"></mat-slide-toggle>
+                </div>
+            </div> 
+        </ng-scrollbar>
+
+    </mat-sidenav>
+
+</mat-sidenav-container> -->
+
+
+
+<mat-sidenav-container>
+    <mat-sidenav *ngIf="settings.menu == 'vertical'" [opened]="settings.sidenavIsOpened"
+        [mode]="sidemenu_mode" #sidenav class="sidenav mat-elevation-z6">
+        <app-sidenav></app-sidenav>
+    </mat-sidenav>
+    <!-- <mat-sidenav-content id="main" perfectScrollbar [disabled]="settings.fixedHeader" (psScrollY)="onPsScrollY($event)"> -->
+    <mat-sidenav-content id="main" >
+        <mat-toolbar color="primary" class="flex-p-x custom-menu">
+            <div fxLayout="row" fxLayoutAlign="space-between center" class="w-100">
+                <div fxLayout="row" fxLayoutAlign="center center" class="w-20">
+                    <button *ngIf="settings.menu == 'vertical'" mat-icon-button (click)="toggleSidenav()">
+                        <mat-icon>menu</mat-icon>
+                    </button>
+                    <a *ngIf="settings.menu == 'horizontal'" mat-raised-button color="accent" routerLink="/"
+                        (click)="closeSubMenus()" class="small-logo">G</a>
+                    <a *ngIf="settings.menu == 'horizontal'" class="logo" routerLink="/"
+                        (click)="closeSubMenus()">GRADUS</a>
+                        <form [formGroup]="form">
+                            <mat-select formControlName="cmbMenu" style="width: 150px !important;" class="font1em" [(ngModel)]="selectedMenu">
+                                <!-- <mat-option *ngFor="let qmenu of q_menu" [value]="qmenu.value" (onSelectionChange)="openPage()">
+                                    {{qmenu.viewValue}}
+                                  </mat-option> -->
+                                <mat-option value='1' (click)="openPage1()">Recently visited</mat-option>
+                                <mat-option value='2' (click)="openPage1()">Favourites</mat-option>
+                                <mat-option value='3' (click)="openPage1()">All Services</mat-option>
+                                <mat-option value='4' (click)="openPage1()" >Dashboard</mat-option>
+                                <mat-option value='5' (click)="openPage1()">Party Query</mat-option>
+                                <mat-option value='6' (click)="openPage1()">Stock Query</mat-option>
+                                <mat-option value='7' (click)="openPage1()">Item Query</mat-option>
+                                <mat-option value='8' (click)="openPage1()">Stoppage Clearance</mat-option>
+                                <mat-option value='9' (click)="openPage1()">User Information</mat-option>
+                            </mat-select>&nbsp;
+                        </form>
+                        <mat-icon class='mat-icon' (click)='updateUserDefaultPage()'>stars</mat-icon>
+                        &nbsp;&nbsp;&nbsp;&nbsp;<span class='font1em'>{{userName}}</span>
+                </div>
+                <div fxLayout="row" class="mat-body w-20 font1em">
+                    
+                </div>
+                <div fxLayout="row" fxLayoutAlign="end center" class="w-20">
+                    <span class="font1em">{{loggedInBranch}}</span>&nbsp;&nbsp;&nbsp;
+                    <span class="font1em">{{loggedInYear}}</span>
+                    <app-fullscreen></app-fullscreen>
+                    <!-- <app-flags-menu fxShow="false" fxShow.gt-sm></app-flags-menu>
+                    <app-applications fxShow="false" fxShow.gt-sm></app-applications>
+                    <app-messages fxShow="false" fxShow.gt-xs></app-messages> -->
+                    <app-user-menu></app-user-menu>
+                </div>
+            </div>
+        </mat-toolbar>
+
+        <!-- <div id="main-content" class="inner-sidenav-content transition-2" perfectScrollbar
+            [disabled]="!settings.fixedHeader" (psScrollY)="onPsScrollY($event)"
+            [class.horizontal-menu-hidden]="isStickyMenu"> -->
+        <div id="main-content" #divMain class="inner-sidenav-content transition-2" 
+            [class.horizontal-menu-hidden]="isStickyMenu">
+            <app-breadcrumb></app-breadcrumb>
+            <router-outlet></router-outlet>
+        </div>
+        <div #backToTop fxLayout="row" fxLayoutAlign="center center" class="back-to-top" (click)="scrollToTop()">
+            <mat-icon>arrow_upward</mat-icon>
+        </div>
+        <div #backToBottom fxLayout="row" fxLayoutAlign="center center" class="back-to-bottom" (click)="scrollToBottom()">
+            <mat-icon>arrow_downward</mat-icon>
+          </div>
+
+    </mat-sidenav-content>
+</mat-sidenav-container>
